[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/BubbleBobble-MVpLp.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Menus/MenuBG_Blur.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/LevelSelect_Normal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/LevelSelect_Hover.png" type="Texture" id=4]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="LevelSelect" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 670.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_right = 1280.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
custom_constants/line_spacing = 0
text = "Level Select"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2"]
margin_left = 638.0
margin_top = 115.0
margin_right = 641.0
margin_bottom = 165.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_left = 486.0
margin_top = 169.0
margin_right = 794.0
margin_bottom = 373.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 308.0
margin_bottom = 204.0
columns = 3

[node name="L1" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L1/CenterContainer"]
margin_left = -14.0
margin_top = -45.0
margin_right = 14.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L2" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L2/CenterContainer"]
margin_left = -18.0
margin_top = -45.0
margin_right = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L3" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L3/CenterContainer"]
margin_left = -19.0
margin_top = -45.0
margin_right = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L4" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L4/CenterContainer"]
margin_left = -21.0
margin_top = -45.0
margin_right = 20.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L5" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L5/CenterContainer"]
margin_left = -19.0
margin_top = -45.0
margin_right = 19.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L6" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L6/CenterContainer"]
margin_left = -19.0
margin_top = -45.0
margin_right = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L7" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
visible = false
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L7/CenterContainer"]
margin_left = -18.0
margin_top = -45.0
margin_right = 17.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L8" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
visible = false
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L8"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L8/CenterContainer"]
margin_left = -19.0
margin_top = -45.0
margin_right = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L9" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
visible = false
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L9/CenterContainer"]
margin_left = -19.0
margin_top = -45.0
margin_right = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L10" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer"]
visible = false
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L10"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 4.59973
margin_bottom = 49.6334
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelnum" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L10/CenterContainer"]
margin_left = -33.0
margin_top = -45.0
margin_right = 33.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer2"]
margin_left = 638.0
margin_top = 377.0
margin_right = 641.0
margin_bottom = 427.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 50

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer2"]
margin_left = 474.0
margin_top = 431.0
margin_right = 805.0
margin_bottom = 526.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.462745, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.341176, 1, 1 )
text = "Main Menu"
flat = true
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L1" to="." method="_on_L1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L2" to="." method="_on_L2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L3" to="." method="_on_L3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L4" to="." method="_on_L4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L5" to="." method="_on_L5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L6" to="." method="_on_L6_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L7" to="." method="_on_L7_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L8" to="." method="_on_L8_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L9" to="." method="_on_L9_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/GridContainer/L10" to="." method="_on_L10_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Button" to="." method="_on_Button_pressed"]
